--- a/src/app/sample-data/sample-data.component.scss
+++ b/src/app/sample-data/sample-data.component.scss
@@ -1,40 +1,41 @@
 .samplePopup {
-  max-height: 800px;
+  max-height: 500px;
   overflow-y: scroll;
   overflow-x: scroll;
+  max-width: 1200px;
     &_head{
       display: flex;
       align-items: center;
       border-bottom: 1px solid var(--border);
       padding: 12px 0;
       justify-content: space-between;
-  
+
       h3{
         font-weight: 500;
         font-size: 18px;
       }
     }
-  
+
     &_body{
       margin-top: 35px;
     }
-  
+
     &_item{
       display: flex;
       justify-content: space-between;
       margin-bottom: 20px;
-  
+
       h3{
         color: var(--tertiary);
         font-weight: 500;
         font-size: 12px;
       }
-  
+
       p{
         color: var(--primary);
       }
     }
-  
+
     &_icon{
       display: flex;
       align-items: center;
@@ -42,7 +43,7 @@
       cursor: pointer;
       justify-content: flex-end;
     }
-  
+
     img {
       width: 20px;
     }
